# usage-os

./: .gitattributes  .gitignore  01-TECH-CONTEXT.md  02-FUTURE-IDEAS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.claude/skills/review/: SKILL.md
.claude/skills/usageos-review/: SKILL.md  codex-schema.json
.cursor/rules/: frontend-design.mdc
.githooks/: pre-push
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
.storybook/: main.ts  preview.tsx
context/: architecture.md  decisions.md  design-system.md  handoff.md  vision.md
context/feasibility/: 2026-06-22-feasibility-audit.md
context/history/: 00-PRD-MVP.md  02-FUTURE-IDEAS.md
context/plans/: 2026-03-22-tier1-oss-hygiene.md  2026-06-22-product-redesign.md  README.md
context/plans/2026-03-22-tier1-oss-hygiene/: plan.md
context/plans/2026-06-22-product-redesign/: plan.md
context/plans/2026-06-26-branding-launch/: plan.md
context/plans/2026-06-27-categorization-v2/: plan.md
context/plans/2026-07-01-post-launch-feedback/: plan.md
context/standards/: capture-and-permissions.md  foundation-models.md  rust.md  tauri-ipc.md  testing-and-ci.md
design/: README.md  category-palette-5.html  components.html  day.html  foundations.html  index.html  landing-bold.html  landing-calm.html  landing-monument.html  landing-new-sections.html  landing-product.html  landing-v2.html  landing.html  menubar.html  onboarding.html  settings-categories.html  settings.html  timeline-icons.html  timeline-variants.html  timeline.html  week.html
design/dmg/: dmg-background.html
design/logo/: contexts.html  icon.html  index.html  landing-hero.html  m3-about-splash.html  splash-2.html  splash.html  wordmark.html
design/logo/assets/: gen-tray-icons.mjs
landing/: README.md  astro.config.mjs  index.html  package-lock.json  package.json  script.js  styles.css
landing/src/pages/: index.astro
landing/src/styles/: landing.css
prototype/: index.html  landing.html
scripts/: gen-latest-json.sh  gen-licenses-extra.mjs  gen-licenses.sh  release-macos.sh
sidecar/: build.sh
sidecar/usageos-ai/: Package.swift  README.md  entitlements.plist
spikes/: README.md
spikes/ax-observer/: Cargo.toml  README.md
spikes/ax-observer/src/: main.rs
spikes/ax-titles/: Cargo.toml  README.md
spikes/ax-titles/src/: main.rs
spikes/browser-url/: Cargo.toml  README.md
spikes/browser-url/src/: main.rs
spikes/embeddings/: Cargo.toml  README.md
spikes/embeddings/src/: main.rs
spikes/foundation-models/: Package.swift  README.md
spikes/foundation-models/.build/: build.db  plugin-tools.yaml
spikes/proc-cwd/: Cargo.toml  README.md
spikes/proc-cwd/src/: main.rs
spikes/project-inference/: Cargo.toml  README.md
spikes/project-inference/src/: main.rs
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  THIRD-PARTY-LICENSES.html  about.hbs  about.toml  deny.toml  dmg-background.tiff  entitlements.plist  tauri.conf.json
src-tauri/agents/: com.usageos.app.agent.plist
src-tauri/capabilities/: default.json
src-tauri/examples/: seed_db.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_schema.sql  0002_seed_canonical_contexts.sql  0003_seed_default_rules.sql  0004_recategorize_claude_as_deep.sql  0005_drop_away_app_spans.sql  0006_relatable_default_categories.sql  0007_recap_cache.sql  README.md
src-tauri/src/: apps.rs  db.rs  glance_panel.rs  lib.rs  login_item.rs  main.rs  migrations.rs  perf.rs  rollup.rs  tray_icon.rs  watcher.rs
src-tauri/src/ai/: mod.rs  sidecar.rs
src-tauri/src/capture/: fake.rs  mod.rs  polling.rs
src-tauri/src/capture/macos/: browser.rs  mod.rs  terminal.rs
src-tauri/src/db/: categories.rs  events.rs  exclusions.rs  mod.rs  projects.rs  recap.rs  settings.rs
src-tauri/src/enrich/: mod.rs  project.rs
src-tauri/src/permissions/: macos.rs  mod.rs
src/__mocks__/: tauri.ts
src/components/: ActivityChart.tsx  SettingsView.tsx  SkeletonLoader.tsx  StatsCard.tsx  TimeRangeSelector.tsx  UpdateBanner.tsx
src/components/common/: DateStepper.tsx  ErrorState.tsx
src/components/dial/: Dial.stories.tsx  Dial.test.tsx  Dial.tsx  MiniDial.stories.tsx  MiniDial.test.tsx  MiniDial.tsx
src/components/glance/: Glance.tsx
src/components/onboarding/: Onboarding.test.tsx  Onboarding.tsx
src/components/settings/: AboutModal.tsx  AppPicker.tsx  BackgroundSettings.test.tsx  BackgroundSettings.tsx  CategoryEditorModal.tsx  ContextEditorModal.tsx  DeleteAllModal.tsx  ExclusionModal.tsx  UncategorizedApps.tsx  UpdateSettings.tsx  primitives.tsx
src/components/shell/: AppShell.tsx  Footer.tsx  TabNav.tsx  ThemeSwitcher.tsx  TitleBar.tsx
src/components/timeline/: TimelineRow.stories.tsx  TimelineRow.test.tsx  TimelineRow.tsx
src/components/ui/: AppIcon.stories.tsx  AppIcon.tsx  Button.stories.tsx  Button.tsx  Chip.stories.tsx  Chip.tsx  DegradedBanner.stories.tsx  DegradedBanner.tsx  DetailInspector.stories.tsx  DetailInspector.tsx  GrantedPill.stories.tsx  GrantedPill.tsx  LedgerRow.stories.tsx  LedgerRow.tsx  Modal.stories.tsx  Modal.tsx  RadioGroup.stories.tsx  RadioGroup.tsx  RecapCard.stories.tsx  RecapCard.test.tsx  RecapCard.tsx  SegmentedControl.stories.tsx  SegmentedControl.tsx  Select.stories.tsx  Select.tsx  Skeleton.stories.tsx  Skeleton.tsx  StatTile.stories.tsx  StatTile.tsx  Swatches.tsx  (+6 more)
src/hooks/: useCaptureHealth.ts  useDayData.ts  useInstalledApps.ts  usePermissions.ts  useRecap.ts  useReducedMotion.ts  useSettingsData.ts  useTimelineData.ts  useViewData.test.tsx  useViewData.ts  useWeekData.ts  useWindowFocus.ts
src/lib/: appIcons.ts  categories.ts  contexts.ts  dates.test.ts  dates.ts  format.ts  geometry.test.ts  geometry.ts  ruleMatch.test.ts  ruleMatch.ts  runs.ts  stats.test.ts  stats.ts  tauri.ts  time.test.ts  time.ts  updater.ts
src/providers/: ThemeProvider.tsx
src/styles/: tokens.css
src/views/: DayView.tsx  Placeholder.tsx  SettingsView.test.tsx  SettingsView.tsx  TimelineView.tsx  WeekView.test.tsx  WeekView.tsx
(+185 files in other folders)
