[package]
name = "usage-os"
version = "0.1.0"
description = "UsageOS — a private, on-device Mac app that records where your time goes and tells you the story of your day."
authors = ["Favour Agozie"]
edition = "2021"

[lib]
name = "usage_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Generated IPC (hard rule 2; see D27). The specta v2 stack is a release candidate: pin exactly
# and move all four together. rc.20 is the highest trio that compiles with tauri 2.9.3 (rc.24
# dropped container `#[specta(rename)]`, which tauri's specta integration still uses).
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.20"
specta-typescript = "=0.0.7"
thiserror = "2"

active-win-pos-rs = "0.8"
user-idle = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }

# Native macOS capture (see D29). Behind the `capture` trait + `#[cfg(target_os = "macos")]`.
# The whole AX surface lives in objc2-application-services; libc backs proc_pidinfo (terminal cwd).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", features = [
    "NSWorkspace",
    "NSRunningApplication",
    "libc",
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSNotification",
    "NSOperation",
    "NSBundle",
    "block2",
] }
objc2-application-services = { version = "0.3.2", features = [
    "AXUIElement",
    "AXError",
    "libc",
] }
objc2-core-foundation = { version = "0.3.2", features = [
    "CFString",
    "CFDictionary",
    "CFNumber",
    "CFRunLoop",
] }
block2 = "0.6"
libc = "0.2"

