[package]
name = "usage-os"
version = "0.1.0"
description = "UsageOS — a private, on-device Mac app that records where your time goes and tells you the story of your day."
authors = ["Favour Agozie"]
edition = "2021"
license = "MIT"
# The app binary. Required because the dev-only `seed_db` bin (perf feature) makes this a
# multi-binary package, and `tauri dev`'s bare `cargo run` needs to know which one to launch.
default-run = "usage-os"

[lib]
name = "usage_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Dev-only perf/stress harness (Phase 6). Gates the synthetic-history generator + the
# read-path timing tests + the `seed_db` bin so none of it ships in the default binary or
# touches the CI default lanes. Enable with `--features perf`.
[features]
perf = []

# The synthetic-history seeder CLI — only built when `perf` is on (`required-features`),
# so a plain `cargo build`/`tauri build` skips it and never sees the feature-gated module.
[[bin]]
name = "seed_db"
path = "src/bin/seed_db.rs"
required-features = ["perf"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
# The AI recap sidecar is spawned via the shell plugin (D49 chunk C). The capability is
# scoped to exactly the one named sidecar (`sidecar: true`), never a general shell:allow-
# execute — see capabilities/default.json + context/standards/foundation-models.md (C8).
# Pinned to 2.2.x: tauri-plugin-shell 2.3.5 hard-requires tauri >= 2.10, whose
# tauri-runtime-wry 2.10.1 + wry 0.54.2 are a broken pair (a Send/Sync mismatch that fails
# to compile). 2.2.1 keeps us on the proven tauri 2.9.3 stack; the sidecar API
# (sidecar/spawn/write/CommandEvent) is unchanged. Revisit when the wry break is fixed.
tauri-plugin-shell = "=2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Generated IPC (hard rule 2; see D27). The specta v2 stack is a release candidate: pin exactly
# and move all four together. rc.20 is the highest trio that compiles with tauri 2.9.3 (rc.24
# dropped container `#[specta(rename)]`, which tauri's specta integration still uses).
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.20"
specta-typescript = "=0.0.7"
thiserror = "2"

active-win-pos-rs = "0.8"
user-idle = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }

# Native macOS capture (see D29). Behind the `capture` trait + `#[cfg(target_os = "macos")]`.
# The whole AX surface lives in objc2-application-services; libc backs proc_pidinfo (terminal cwd).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", features = [
    "NSWorkspace",
    "NSRunningApplication",
    "NSWindow",
    "NSPanel",
    "NSResponder",
    "libc",
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSNotification",
    "NSOperation",
    "NSBundle",
    "block2",
] }
objc2-application-services = { version = "0.3.2", features = [
    "AXUIElement",
    "AXError",
    "libc",
] }
objc2-core-foundation = { version = "0.3.2", features = [
    "CFString",
    "CFDictionary",
    "CFNumber",
    "CFRunLoop",
] }
block2 = "0.6"
libc = "0.2"

