[package]
name = "usage-os"
version = "0.1.0"
description = "UsageOS — a private, on-device app that records where your time goes and tells you the story of your day."
authors = ["Favour Agozie"]
edition = "2021"
license = "MIT"
# The app's default binary (src/main.rs). Kept explicit so any bare `cargo run` (e.g.
# `tauri dev`) is unambiguous. The dev-only `seed_db` perf harness is a cargo *example*,
# not a bin — so Tauri's bundler, which copies every package binary into the .app, never
# tries to ship it (see the [[example]] block).
default-run = "usage-os"

[lib]
name = "usage_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Dev-only perf/stress harness (Phase 6). Gates the synthetic-history generator + the
# read-path timing tests + the `seed_db` example so none of it ships in the default binary
# or touches the CI default lanes. Enable with `--features perf`.
[features]
perf = []

# The synthetic-history seeder CLI. A cargo *example* (not a [[bin]]) so `tauri build`'s
# bundler — which copies every package binary into the .app — never tries to ship it.
# Gated to `--features perf` (`required-features`), so a plain `cargo build`/`tauri build`
# skips it and never sees the feature-gated module.
#   cargo run --example seed_db --features perf -- --demo ...
[[example]]
name = "seed_db"
path = "examples/seed_db.rs"
required-features = ["perf"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
# The AI recap sidecar is spawned via the shell plugin (D49 chunk C). The capability is
# scoped to exactly the one named sidecar (`sidecar: true`), never a general shell:allow-
# execute — see capabilities/default.json + context/standards/foundation-models.md (C8).
# Pinned to 2.2.x: tauri-plugin-shell 2.3.5 hard-requires tauri >= 2.10, whose
# tauri-runtime-wry 2.10.1 + wry 0.54.2 are a broken pair (a Send/Sync mismatch that fails
# to compile). 2.2.1 keeps us on the proven tauri 2.9.3 stack; the sidecar API
# (sidecar/spawn/write/CommandEvent) is unchanged. Revisit when the wry break is fixed.
tauri-plugin-shell = "=2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Generated IPC (hard rule 2; see D27). The specta v2 stack is a release candidate: pin exactly
# and move all four together. rc.20 is the highest trio that compiles with tauri 2.9.3 (rc.24
# dropped container `#[specta(rename)]`, which tauri's specta integration still uses).
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.20"
specta-typescript = "=0.0.7"
thiserror = "2"

active-win-pos-rs = "0.8"
user-idle = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }
tauri-plugin-updater = "=2.9.0"
# Launch at login (D68): opt-in, LaunchAgent mode (a plist in ~/Library/LaunchAgents — no
# AppleScript/Automation involved). Called only from Rust behind our own specta commands,
# so no capability entry is needed.
tauri-plugin-autostart = "2"

# Native macOS capture (see D29). Behind the `capture` trait + `#[cfg(target_os = "macos")]`.
# The whole AX surface lives in objc2-application-services; libc backs proc_pidinfo (terminal cwd).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", features = [
    "NSWorkspace",
    "NSRunningApplication",
    "NSWindow",
    "NSPanel",
    "NSResponder",
    "libc",
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSNotification",
    "NSOperation",
    "NSBundle",
    "block2",
] }
objc2-application-services = { version = "0.3.2", features = [
    "AXUIElement",
    "AXError",
    "libc",
] }
objc2-core-foundation = { version = "0.3.2", features = [
    "CFString",
    "CFDictionary",
    "CFNumber",
    "CFRunLoop",
] }
block2 = "0.6"
libc = "0.2"

